--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,24 @@
 {
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
+    "allowUnreachableCode": false,
     "baseUrl": "src",
+    "experimentalDecorators": true,
+    "lib": [
+      "es2018",
+      "DOM"
+    ],
+    "module": "esnext",
+    "moduleResolution": "Node",
+    "noEmit": true,
     "outDir": "dist",
-    "lib": ["ES2016"],
-    "module": "CommonJS",
-    "target": "ES2016",
-    "strict": true,
-    "skipLibCheck": true,
     "removeComments": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strict": true,
+    "target": "es2018",
   },
-  "include": ["src/**/*"]
+  "include": [
+    "src/**/*"
+  ]
 }
