--- a/package.json
+++ b/package.json
@@ -2,19 +2,25 @@
   "name": "screeps",
   "version": "1.0.0",
   "license": "MIT",
+  "type": "module",
   "scripts": {
-    "upload": "node dist/upload",
-    "build": "bun build ./src/main/main.ts --outfile=dist.js",
-    "start": "rm -f dist.js && bun run build && bun run src/upload.js",
-    "start:node": "npm run build && npm run upload",
+    "build:bun": "bun build ./src/main/main.ts --outfile=dist.js",
+    "build": "tsc",
+    "start:bun": "rm -f dist.js && bun run build:bun && bun src/upload.js",
+    "start": "rm -rf dist && npm run build && node src/upload.js",
     "lint": "eslint \"src/**/*{.js,.ts}\" --fix && tsc"
   },
   "dependencies": {
     "@softsky/utils": "^1.0.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@softsky/configs": "^1.0.8",
+    "@types/babel__core": "^7.20.5",
+    "@types/bun": "^1.1.15",
     "@types/node": "^14.18.63",
     "@types/screeps": "^3.3.8",
-    "@softsky/configs": "^1.0.8"
+    "dotenv": "^16.4.7"
   }
 }
