--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:bun": "bun build ./src/main/main.ts --outfile=dist.js",
     "build": "tsc",
     "start:bun": "rm -f dist.js && bun run build:bun && bun src/upload.js",
-    "start": "rm -rf dist && npm run build && node src/upload.js",
+    "start": "bun tools/upload.ts",
     "lint": "eslint \"src/**/*{.js,.ts}\" --fix && tsc"
   },
   "dependencies": {
@@ -18,7 +18,7 @@
     "@babel/preset-env": "^7.26.0",
     "@softsky/configs": "^1.0.8",
     "@types/babel__core": "^7.20.5",
-    "@types/bun": "^1.1.15",
+    "@types/bun": "^1.1.16",
     "@types/node": "^14.18.63",
     "@types/screeps": "^3.3.8",
     "dotenv": "^16.4.7"
